--- a/tidder-eureka/pom.xml
+++ b/tidder-eureka/pom.xml
@@ -6,7 +6,7 @@
     <groupId>app.sagen.tidder</groupId>
     <artifactId>tidder-eureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>tidder-eureka</name>
     <description>Demo project for Spring Boot</description>
 
