--- a/tidder-zuul/Dockerfile
+++ b/tidder-zuul/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /app
 WORKDIR /app
-EXPOSE 8762
+EXPOSE 8080
 ARG JAR_FILE=tidder-zuul-0.0.1-SNAPSHOT.jar
 ADD ./target/$JAR_FILE /app
-RUN "echo #!/bin/bash\n java -jar ${JAR_FILE}" > ./entrypoint.sh
-ENTRYPOINT [".entrypoint.sh"]
+#RUN echo "#!/bin/bash\n java -jar ${JAR_FILE}" > ./entrypoint.sh
+ENTRYPOINT ["java", "-jar", "tidder-zuul-0.0.1-SNAPSHOT.jar"]
