Added eureka fallback url

--- a/tidder-front/src/main/resources/application.properties
+++ b/tidder-front/src/main/resources/application.properties
@@ -15,3 +15,5 @@ server.error.whitelabel.enabled=false
 
 server.port=9090
 spring.application.name=front
+
+eureka.client.serviceUrl.defaultZone=http://tidder-eureka:8761/eureka/
