--- a/tidder-oauth/pom.xml
+++ b/tidder-oauth/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <EUREKA_URI>http://tidder-eureka:8761/eureka/</EUREKA_URI>
     </properties>
 
     <dependencies>
@@ -59,6 +60,12 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
