--- a/tidder-zuul/src/main/resources/application.properties
+++ b/tidder-zuul/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=zuul-server
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=http://tidder-eureka:8761/eureka/
 
 zuul.routes.home.path=/**
 zuul.routes.home.service-id=front
