Zuul forward Host headers

--- a/tidder-zuul/src/main/resources/application.properties
+++ b/tidder-zuul/src/main/resources/application.properties
@@ -10,3 +10,5 @@ zuul.routes.home.service-id=front
 
 zuul.routes.test.path=/test**
 zuul.routes.test.service-id=test
+zuul.add-host-header=true
+zuul.add-proxy-headers=true
