--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,25 @@
-version: '3'
+version: '3.5'
 services:
   tidder-eureka:
     container_name: tidder-eureka
     build: ./tidder-eureka/
+    restart: always
     ports:
       - "8761:8761"
   tidder-zuul:
     container_name: tidder-zuul
     build: ./tidder-zuul/
+    restart: always
+    depends_on:
+      - tidder-eureka
+      - tidder-front
     ports:
       - "8080:8080"
   tidder-front:
     build: ./tidder-front/
+    restart: always
+    depends_on:
+      - tidder-eureka
     ports:
       - "9090"
     deploy:
@@ -19,6 +27,9 @@ services:
       replicas: 6
   tidder-oauth:
     build: ./tidder-oauth/
+    restart: always
+    depends_on:
+      - tidder-eureka
     ports:
       - "9099"
     deploy:
@@ -26,6 +37,9 @@ services:
       replicas: 6
   tidder-test1:
     build: ./tidder-test1/
+    restart: always
+    depends_on:
+      - tidder-eureka
     ports:
       - "9092" 
     deploy:
@@ -33,6 +47,9 @@ services:
       replicas: 6
   tidder-test2:
     build: ./tidder-test2/
+    restart: always
+    depends_on:
+      - tidder-eureka
     ports:
       - "9091" 
     deploy:
