--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3.5'
 services:
+  db:
+    container_name: tidder-mysql
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_RANDOM_ROOT_PASSWORD: true
+      MYSQL_DATABASE: tidder
+      MYSQL_USER: tidderadmin
+      MYSQL_PASSWORD: nimdareddit
+    ports:
+    - "3306:3306"
   tidder-eureka:
     container_name: tidder-eureka
     build: ./tidder-eureka/
@@ -13,6 +25,7 @@ services:
     depends_on:
       - tidder-eureka
       - tidder-front
+      - db
     ports:
       - "8080:8080"
   tidder-front:
@@ -20,6 +33,7 @@ services:
     restart: always
     depends_on:
       - tidder-eureka
+      - db
     ports:
       - "9090"
     deploy:
@@ -30,6 +44,7 @@ services:
     restart: always
     depends_on:
       - tidder-eureka
+      - db
     ports:
       - "9099"
     deploy:
