--- a/tidder-front/src/main/resources/application.properties
+++ b/tidder-front/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.platform=h2
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
+spring.datasource.username=tidderadmin
+spring.datasource.password=nimdareddit
 
 # re-create database at every restart
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # debug
-logging.level.org.springframework.security=info
+logging.level.org.springframework.security=debug
 server.error.include-stacktrace=always
-#spring.datasource.url=jdbc:h2:mem:test
 
 # use tomcat's error page
 server.error.whitelabel.enabled=false
