--- a/tidder-eureka/src/main/resources/application.properties
+++ b/tidder-eureka/src/main/resources/application.properties
@@ -2,3 +2,4 @@ eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = false
 server.port = 8761
 spring.application.name=eureka-server
+eureka.dashboard.path=/
