--- a/tidder-eureka/src/main/resources/application.properties
+++ b/tidder-eureka/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = false
+eureka.instance.preferIpAddress=true
 server.port = 8761
 spring.application.name=eureka-server
 eureka.dashboard.path=/
