--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,16 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+  tidder-user:
+    build: ./tidder-user/
+    restart: always
+    depends_on:
+      - tidder-eureka
+    ports:
+      - "9090"
+    deploy:
+      mode: replicated
+      replicas: 5
 networks:
   tidder_default:
     ipam:
