--- a/tidder-user/src/main/resources/application.properties
+++ b/tidder-user/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #spring.h2.console.enabled=true
-#spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test
 
-spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
-spring.datasource.username=tidderadmin
-spring.datasource.password=nimdareddit
+#spring.datasource.platform=mysql
+#spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
+#spring.datasource.username=tidderadmin
+#spring.datasource.password=nimdareddit
 
 # re-create database at every restart
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -18,6 +18,6 @@ server.error.include-stacktrace=always
 server.error.whitelabel.enabled=false
 
 server.port=9090
-spring.application.name=front
+spring.application.name=user
 
 eureka.client.serviceUrl.defaultZone=http://tidder-eureka:8761/eureka/
