--- a/tidder-user/src/main/resources/application.properties
+++ b/tidder-user/src/main/resources/application.properties
@@ -21,3 +21,11 @@ server.port=9090
 spring.application.name=user
 
 eureka.client.serviceUrl.defaultZone=http://tidder-eureka:8761/eureka/
+
+# email setup
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tidderno@gmail.com
+spring.mail.password=velngjmcrongtaie
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
