--- a/tidder-front/src/main/resources/application.properties
+++ b/tidder-front/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=tidderadmin
 spring.datasource.password=nimdareddit
 
 # re-create database at every restart
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # debug
 logging.level.org.springframework.security=debug
