--- a/tidder-zuul/src/main/resources/application.yml
+++ b/tidder-zuul/src/main/resources/application.yml
@@ -14,7 +14,7 @@ eureka:
 zuul:
   add-host-header: true
   add-proxy-headers: true
-  sensitiveHeaders: Cookie,Set-Cookie
+  sensitiveHeaders:
   routes:
     eureka-front:
       path: /eureka*
