Added tidder-common for common classes

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
         <module>tidder-zuul</module>
         <module>tidder-user</module>
         <module>tidder-topic</module>
-        <module>tidder-post</module>
         <module>tidder-likes</module>
+        <module>tidder-post</module>
+        <module>tidder-common</module>
     </modules>
 
 </project>
