--- a/tidder-user/pom.xml
+++ b/tidder-user/pom.xml
@@ -24,6 +24,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>app.sagen.tidder</groupId>
+            <artifactId>tidder-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
