--- a/tidder-user/src/main/resources/application.properties
+++ b/tidder-user/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
 spring.datasource.username=tidderadmin
 spring.datasource.password=nimdareddit
 
+spring.datasource.dbcp2.test-while-idle=true
+spring.datasource.dbcp2.validation-query=SELECT 1
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 # re-create database at every restart
 spring.jpa.hibernate.ddl-auto=create-drop
 
