--- a/tidder-user/src/main/resources/application.properties
+++ b/tidder-user/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#spring.h2.console.enabled=true
-#spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test
 
-spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
-spring.datasource.username=tidderadmin
-spring.datasource.password=nimdareddit
+#spring.datasource.platform=mysql
+#spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
+#spring.datasource.username=tidderadmin
+#spring.datasource.password=nimdareddit
 
-spring.datasource.dbcp2.test-while-idle=true
-spring.datasource.dbcp2.validation-query=SELECT 1
+#spring.datasource.dbcp2.test-while-idle=true
+#spring.datasource.dbcp2.validation-query=SELECT 1
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # re-create database at every restart
 spring.jpa.hibernate.ddl-auto=create-drop
