--- a/tidder-likes/src/main/resources/application.properties
+++ b/tidder-likes/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test
 
+#spring.datasource.platform=mysql
+#spring.datasource.url=jdbc:mysql://tidder-mysql:3306/tidder
+#spring.datasource.username=tidderadmin
+#spring.datasource.password=nimdareddit
+
+# re-create database at every restart
+spring.jpa.hibernate.ddl-auto=update
+
+# debug
+server.error.include-stacktrace=always
+
+# use tomcat's error page
+server.error.whitelabel.enabled=false
+
+server.port=9090
+spring.application.name=likes
+
+eureka.client.serviceUrl.defaultZone=http://tidder-eureka:8761/eureka/
